--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -40,8 +40,10 @@
                   </span>
                   <div class="display-flex justify-content-between flex-wrap  mt-4">
                     <div class="display-flex mt-3 right-align social-icon">
-                      <a href="/museo/<%=museo.id_museo%>" class="primary-color-txt"> <i class="material-icons">edit
+                      <% if (session == museo.id_museo){%>
+                        <a href="/museo/<%=museo.id_museo%>" class="primary-color-txt"> <i class="material-icons">edit
                         </i> </a>
+                      <%}%>
                       <a onclick="deleteMuseum(this)" id="<%=museo.id_museo%>" class="primary-color-txt"> <i
                           class="material-icons">delete</i> </a>
                     </div>
