--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -13,20 +13,16 @@
 <div class="container" style="margin-bottom: 10%;">
     <h1 class="white-text">Agregar Nueva Guía</h4>
     <div class="white" style="padding-top: 2em; padding-bottom: 2em;">
-        <form action="/guias/agregar_guia" method="POST">
+        <form id="nuevo_imagen" method="POST" enctype="multipart/form-data">
             <div class="row  valign-wrapper" style="margin-bottom: 0px;">
                 <div class="col s3 center">
-                    <div class="card" style="border-radius: 20px;">
+                    <div class="card imgPicker">
                         <div class="card-image">
-                            <img src="../assets/img/image_placeholder.jpg" style="border-radius: 20px;">
-                            <div class="file-field input-field">
-                                <a type="file" class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
-                                    <input type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
-                                    <i class="tiny material-icons">edit</i>
-                                </a>
-                            </div>
+                          <img class="imgPicker imgP" src="/img/no-img.jpg">
+                          <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
+                          <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
                         </div>
-                    </div>
+                      </div>
                 </div>
                 <div class="col s9">
                     <div class="row">
@@ -81,4 +77,5 @@
     </div>
 </div>
 
+<script src="/js/script_nuevo_museo.js"></script>
 <%- include('includes/footer.ejs') %>
