--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -5,12 +5,18 @@
                     <div class="card">
                         <div class="card-content pb-0">
                             <div class="card-header mb2"> 
-                                <h4 class="card-title"> Regístra un nuevo museo </h4>
-                                <button onclick="addSalas()" id="addSalas" class="waves-effect waves-dark btn">add</button>
+                                <h4 class="card-title"> Regístra un nuevo museo        
+                                    Número de salas: 
+                                    <button onclick="addSalas()" id="addSalas" class="waves-effect waves-dark btn"> <i class="material-icons"> remove </i> </button> 
+                                        <span id="num_salas"> 0 </span>
+                                    <button onclick="addSalas()" id="addSalas" class="waves-effect waves-dark btn"> <i class="material-icons"> add </i> </button>
+                                </h4> 
+                                <br>
                             </div>
+                            
                             <ul class="stepper horizontal">
-                            <li class="step active">
-                                <div class="step-title waves-effect"> Información general del museo </div>
+                            <li class="step active"> 
+                                <div class="step-title waves-effect"> <p>Información</p> <p>general del museo</p> </div>
                                 <div class="step-content">
                                  <div class="row">
                                      <div class="col s5">
@@ -52,8 +58,11 @@
                                      </div>
                                  </div>
                                    <div class="step-actions">
-                                      <!-- Here goes your actions buttons -->
-                                      <button class="waves-effect waves-dark btn next-step">CONTINUE</button>
+                                      <div class="row">
+                                        <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
+                                        <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior  <i class="material-icons left"> arrow_back </i> </button> </div>
+                                        <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
+                                      </div>
                                    </div>
                                 </div>
                              </li>
@@ -68,8 +77,11 @@
                                          <div> Google Maps API integration goes here </div>
                                      </div>
                                     <div class="step-actions">
-                                       <!-- Here goes your actions buttons -->
-                                       
+                                        <div class="row">
+                                            <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
+                                            <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior  <i class="material-icons left"> arrow_back </i> </button> </div>
+                                            <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
+                                          </div>
                                     </div>
                                  </div>
                               </li>
@@ -85,8 +97,11 @@
                                      <div> QUILL TEXT EDITOR? </div>
                                     
                                     <div class="step-actions">
-                                       <!-- Here goes your actions buttons -->
-                                       
+                                        <div class="row">
+                                            <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
+                                            <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior  <i class="material-icons left"> arrow_back </i> </button> </div>
+                                            <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
+                                        </div>
                                     </div>
                                  </div>
                               </li>
