--- a/views/obra_modificar.ejs
+++ b/views/obra_modificar.ejs
@@ -15,7 +15,7 @@
                                 <div class="card-content pb-0">
                                     <div class="card-header mb2">
                                     </div>
-                                    <form id="modifySala" action="/museo/<%=museo%>/<%=sala.id_sala%>" enctype="multipart/form-data">
+                                    <form id="modifyObra" action="/museo/<%=museo%>/<%=sala.id_sala%>" enctype="multipart/form-data">
                                         <ul class="stepper horizontal">
                                             <li class="step active">
                                                 <div class="step-title waves-effect">
@@ -34,31 +34,8 @@
                                                                         <label for="nom_obra"> Nombre de la obra </label>
                                                                     </div>
 
-                                                                    <!-- DESCRIPCIÓN -->
-                                                                    <div class="input-field">
-                                                                        <textarea id="desc_obra" name="desc_obra"
-                                                                            class="materialize-textarea validate"
-                                                                            required><%=obra.desc_obra%></textarea>
-                                                                        <label for="desc_obra"> Descripción <span
-                                                                                class="required">*</span></label>
-                                                                        <span class="helper-text"
-                                                                            data-error="Este input es requerido"></span>
-                                                                    </div>
                                                                 </div>
-                                                                <div class="input-field col s10 offset-s1">
-                                                                    <div class="file-field input-field">
-                                                                        <div class="btn">
-                                                                            <input id="audioname" value="<%=obra.audio_obra%>" style="display:none">
-                                                                            <span> Mp3</span>
-                                                                            <input type="file" id="uploadAudio">
-                                                                        </div>
-                                                                        <div class="file-path-wrapper">
-                                                                            <input placeholder="audioguía (archivo mp3)" class="file-path validate"
-                                                                                value="<%=obra.audio_obra%>" name="file" type="text">
-                                                                        </div>
-                            
-                                                                    </div>
-                                                                </div>
+                                                                
                             
                                                                 <div class="col offset-s1">
                                                                     <div class="input-field">
@@ -117,26 +94,59 @@
                                                 </div>
                                             </li>
                                             <li class="step">
-                                                <div class="step-title waves-effect"> Salas </div>
-                                                <div class="step-content">
-                                                  <!-- DESCRIPCIÓN -->
-                                                  <div class="row">
-                                                    <% for (let obra of obras){%>
-                                                      <div> <%= obra.nom_obra %> </div>
-                                                      <a href="/museo/<%=museo%>/<%=sala.id_sala%>/<%=obra.id_obra%>"> link </a>
-                                                      <%}%>
-                                                  </div>
-                                                  
-                                                  <a href="/museo/<%=museo%>/<%=sala.id_sala%>/nueva_obra"> link </a>
-                                                  
-                                                  <div class="step-actions">
-                                                    <div class="row">
-                                                      <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior <i
-                                                            class="material-icons left"> arrow_back </i> </button> </div>
-                                                    </div>
-                                                  </div>
+                                                <div class="step-title waves-effect">
+                                                    <p>Descripción</p>
                                                 </div>
-                                              </li>
+                                                <div class="step-content">
+                                                    <div class="row">
+                                                        <div class="col s7">
+
+                                                            <!-- NOMBRE -->
+                                                            <div class="row center">
+                                                                <div class="col s10 offset-s1">
+                                                                    
+                                                                    <!-- DESCRIPCIÓN -->
+                                                                    <div class="input-field">
+                                                                        <textarea id="desc_obra" name="desc_obra"
+                                                                            class="materialize-textarea validate"
+                                                                            required><%=obra.desc_obra%></textarea>
+                                                                        <label for="desc_obra"> Descripción <span
+                                                                                class="required">*</span></label>
+                                                                        <span class="helper-text"
+                                                                            data-error="Este input es requerido"></span>
+                                                                    </div>
+                                                                
+                                                                    <div class="file-field input-field">
+                                                                        <div class="btn">
+                                                                            <input id="audioname" style="display:none">
+                                                                            <span> Mp3</span>
+                                                                            <input type="file" id="uploadAudio">
+                                                                        </div>
+                                                                        <div class="file-path-wrapper">
+                                                                            <input placeholder="audioguía (archivo mp3)" value="<%=obra.audio_obra%>" class="file-path validate"
+                                                                                name="file" type="text">
+                                                                        </div>
+                            
+                                                                    </div>
+                                                                </div>
+                            
+                                                                
+                                                            </div>
+                                                        </div>
+                                                        
+                                                    </div>
+                                                    <div class="step-actions">
+                                                        <div class="row">
+                                                            
+                                                            <div class="col"><button type="submit" value="upload"
+                                                                    class="btn waves-effect waves-light green"><i
+                                                                        class="material-icons left">check</i>
+                                                                    Guardar Cambios
+                                                                </button></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
                                         </ul>
                                     </form>
                                 </div>
@@ -147,7 +157,7 @@
                 </div>
 
 
-                <script src="/js/script_create_sala.js"></script>
+                <script src="/js/script_create_obra.js"></script>
             </main>
 
 <%- include('includes/footer.ejs') %>
